--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy
-os
-opencv-python-headless
-Pillow
-streamlit
+numpy==1.22.3
+opencv-python-headless 4.6.0.66
+Pillow==9.2.0
+streamlit==1.10.0
